# XorList

./: .travis.yml  CMakeLists.txt  README.md
include/: XorList.hpp
tests/: CMakeLists.txt  StackAllocator.hpp  tests.cc
